--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,36 +13,41 @@ body {
 }
 
 .form-container {
-  margin: 30px auto;
-  max-width: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
   background: #ccc;
   border-radius: 2mm;
-  /* height: 100vh; */
 }
 
 #login-form {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 #login-form label {
   font-size: 1.5rem;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 #login-form #login-form-input {
   padding: 0.5rem;
   border: none;
-  
+  height: 2.4rem;
   border-bottom: 1px solid #ccc;
 }
 
 #login-form #login-form-btn {
   border: none;
   background: none;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
+  margin-left: 15px;
   cursor: pointer;
 }
 /* .player-info-container {
