fixed port path, started working on interface, need a break

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,10 +44,8 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
-/* CSS Styles */
-canvas {
-  /* border: 1px solid black; */
-}
+/* CSS STYLES */
+/* form */
 .form-container {
   position: absolute;
   top: 50%;
@@ -86,6 +84,29 @@ canvas {
   padding: 0.5rem 2rem;
   margin-left: 15px;
   cursor: pointer;
+}
+
+/* game container */
+.game-container {
+  display: flex;
+  flex-direction: row;
+}
+/* player stats */
+.box {
+  padding: 1rem;
+}
+.player-stats {
+  display: none;
+  flex-direction: column;
+  width: 192px;
+  border: 1px solid red;
+}
+
+.interface-container {
+  display: none;
+  width: 192px;
+  height: 704px;
+  border: 1px solid red;
 }
 
 /* .player-info-container {
