--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,13 +86,13 @@ p, h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 
-/* game container */
+/* game container - full display */
 .game-container {
   display: flex;
   flex-direction: row;
 }
-/* player stats */
-.box {
+/* player stats - lefthand side */
+.game-container .player-stats .box {
   padding: 1rem;
 }
 
@@ -100,7 +100,7 @@ p, h1, h2, h3, h4, h5, h6 {
   display: none;
   flex-direction: column;
   width: 192px;
-  /* border: 1px solid red; */
+  background: rgb(46, 46, 46);
 }
 
 .game-container .player-stats .main-stats #player-name {
@@ -113,6 +113,7 @@ p, h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  line-height: 1.8rem;
   color: #fff;
   text-shadow:
     -1px -1px 0 black,
@@ -121,43 +122,26 @@ p, h1, h2, h3, h4, h5, h6 {
     -1px -1px 0 black;
 }
 
-.interface-container {
+/* interface - righthand side */
+/* .interface-container {
   display: none;
   width: 192px;
   height: 704px;
-  border: 1px solid red;
+  background: #464646;
 }
 
-/* .player-info-container {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
-  font-size: 1.2rem;
+.interface-container .player-inventory-container {
+  display: flex;
+  flex-direction: column;
 }
 
-.player-info-container .player-slots, .player-inventory {
-  margin-top: 1rem;
+.interface-container .player-inventory-container #equipment-slots {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 0.5rem;
-  padding: 0.5rem;
-  border: 1px solid red;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
-.player-info-container .slot {
-  text-align: center;
-  border: 1px solid red;
-  width: 50px;
-  height: 50px;
-  padding: 1rem;
-}
-
-.radar-container {
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
-  border: 1px solid red;
-  width: 200px;
-  height: 80%;
-}
-*/
+.interface-container .player-inventory-container #equipment-slots .equipment-slot {
+  width: 32px;
+  height: 32px;
+  border: 1px solid black;
+} */
